# analysis

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
data/: cohort1.csv  cohort3.csv  userdata.csv
data/merged/: association.csv  cohort1.csv  cohort3.csv  text-association.csv  userdata.csv
data/pilot/: association.csv  cohort1.csv  cohort3.csv  text-association.csv  userdata.csv
data/prolific/: association.csv  cohort1.csv  cohort2.csv  cohort3.csv  text-association.csv  userdata.csv
data/tlx/: results-survey.csv
scripts/: pull-analysis-data  query-analytics.sql  query-association.sql  query-text-association.sql  query.sql
src/: run_analysis.py
src/eyetap_analysis/: __init__.py  agreement.py  analytics.py  cli.py  config.py  dtype.py  efficiency.py  load.py  report.py  stats.py  time_analysis.py
