[project]
name = "eyetap-analysis"
version = "0.1.0"
description = "Annotation survey efficiency and agreement analysis pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pingouin>=0.5",
    "krippendorff>=0.6",
    "pyyaml>=6.0",
]

[project.scripts]
eyetap-analysis = "eyetap_analysis.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
